--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -754,6 +754,10 @@ table.custom-table tr td {
   }
 }
 
+#allocation-confirm .custom-modal .close {
+  z-index: 1;
+}
+
 @media screen and (min-width: 769px) {
   #allocation-confirm .custom-modal .close {
     display: none;
@@ -2251,6 +2255,12 @@ table.custom-table tr td {
 }
 
 @media screen and (max-width: 1023px) {
+  #transaction h2 .back {
+    left: -1.25rem;
+  }
+}
+
+@media screen and (max-width: 575px) {
   #transaction h2 .back {
     left: -1.25rem;
   }
