--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,4 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
+
+// @font-face {
+//   font-family: Source Sans Pro;
+//   src: url(../fonts/SourceSansPro-Regular.ttf);
+// }
+// @font-face {
+//   font-family: SourceSansPro-SemiBold;
+//   src: url(../fonts/SourceSansPro-SemiBold.ttf);
+// }
+// @font-face {
+//   font-family: SourceSansPro-Light;
+//   src: url(../fonts/SourceSansPro-Light.ttf);
+// }
+// @font-face {
+//   font-family: SourceSansPro-Bold;
+//   src: url(../fonts/SourceSansPro-Bold.ttf);
+// }
+// @font-face {
+//   font-family: SourceSansPro-Black;
+//   src: url(../fonts/SourceSansPro-Black.ttf);
+// }
+// @font-face {
+//   font-family: SourceSansPro-Italic;
+//   src: url(../fonts/SourceSansPro-Italic.ttf);
+// }
 @import "./_constants.scss";
 
 // /////////////////////////////////////////////////////// GENERAL STYLING ///////////////////////////////////////////////////////////////
@@ -672,6 +697,7 @@ table.custom-table {
     }
 
     .close {
+      z-index: 1;
       @media screen and (min-width: 769px) {
         display: none;
       }
@@ -1916,6 +1942,10 @@ table.custom-table {
       transform: translateY(-50%);
 
       @media screen and (max-width: 1023px) {
+        left: -1.25rem;
+      }
+
+      @media screen and (max-width: 575px) {
         left: -1.25rem;
       }
     }
